wasm: fix build with emsdk 1.38.26

emscripten removed their fake SSE support, which removed x86intrin.h

Task-number: QTBUG-73657
Change-Id: I77094fc77be3e685adf9e16d8c3e6aebde9b0687
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>